Distinguish between user deactivation and activation error for vpn connections as well.

BUG: 320533
FIXED-IN: 0.9.0.9